--- a/package.json
+++ b/package.json
@@ -15,8 +15,14 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "node-sass": "^7.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "sass": "^1.60.0",
+    "sass-loader": "^13.2.1",
+    "webpack": "^5.76.3"
   }
 }
